# transactions

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
apps/transactions-cli/: pyproject.toml
apps/transactions-cli/src/transactions_cli/: config.py  factory.py  main.py
apps/transactions-web/: pyproject.toml
apps/transactions-web/src/transactions_web/: auth.py  config.py  db.py  main.py  service.py
apps/transactions-web/src/transactions_web/static/: manifest.json  sw.js
apps/transactions-web/src/transactions_web/templates/: base.html  dashboard.html  login.html  register.html  settings.html
apps/transactions-web/src/transactions_web/templates/partials/: account_rows.html  components.html  csrf.html  transaction_rows.html
