[project]
name = "transactions-cli"
version = "0.1.0"
description = "CLI tool for financial transactions"
requires-python = ">=3.12"
dependencies = [
    "transactions-core",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "orjson>=3.9.15",
]

[project.scripts]
finance = "transactions_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transactions_cli"]
