[project]
name = "transactions-web"
version = "0.1.0"
description = "Web app for financial transactions"
requires-python = ">=3.12"
dependencies = [
    "transactions-core",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.16",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.8.0",
    "itsdangerous>=2.0.0",
]

[project.scripts]
web = "transactions_web.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transactions_web"]
